--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,7 @@
 monitor.host=127.0.0.1
 monitor.port=60000
 path=conversacion
-persistencia=json
+persistencia=xml
+algo="ecb"
 key=mi-clave-secreta-1234567
 iv=mi-iv-unico-456
