se agrego la persistencia de los contactos

--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,8 @@
 monitor.host=127.0.0.1
 monitor.port=60000
 path=conversacion
-persistencia=xml
+cpath=contactos
+persistencia=texto
 algo="ecb"
-key=mi-clave-secreta-1234567
+key=mi-clave-123457
 iv=mi-iv-unico-456
